Including lightbox and flexslider styles

--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -1,5 +1,6 @@
 @import "gravityforms.less";
 @import "helpers.less";
+@import "plugins.less";
 @import "woocommerce.less";
 
 /* ===== Global ===== */
