More CSS for full-width page option

--- a/assets/less/helpers.less
+++ b/assets/less/helpers.less
@@ -185,5 +185,10 @@ div.wrap.full-width {
 	div.content.row {
 		margin-left: 0;
 		margin-right: 0;
+		
+		main.main {
+			padding-left: 0;
+			padding-right: 0;
+		}
 	}
 }
