Adds first version of social share shortcode

--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -1,6 +1,7 @@
 @import "gravityforms.less";
 @import "helpers.less";
 @import "plugins.less";
+@import "social-share.less";
 @import "woocommerce.less";
 
 /* ===== Global ===== */
