Fixes for radio and checkbox elements

--- a/assets/less/gravityforms.less
+++ b/assets/less/gravityforms.less
@@ -49,3 +49,12 @@
 #gforms_confirmation_message {
   .alert();
 }
+
+.ginput_container ul.gfield_checkbox input,
+.ginput_container ul.gfield_radio input {
+	float: left;
+	display: inline-block;
+	width: auto;
+	margin-right: 10px;
+	margin-top: -8px;
+}
