First version with WooCommerce support -- not quite done yet

--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -4,6 +4,9 @@
 @import "social-share.less";
 @import "woocommerce.less";
 
+@import "bootstrap-chosen-variables.less";
+@import "bootstrap-chosen.less";
+
 /* ===== Global ===== */
 
 /* ===== Header ===== */
