Enhancements to checkout display, downloads and order templates

--- a/assets/less/woocommerce.less
+++ b/assets/less/woocommerce.less
@@ -300,6 +300,12 @@ span.onsale {
 
 	.woocommerce-billing-fields {
 	
+		#billing_country_field {
+			strong {
+				display: block;
+			}
+		}
+	
 		#billing_first_name_field {
 			.make-xs-column(6);
 			.first();
