Changes to WooCommerce layout, using rows instead of floating list items

--- a/assets/less/woocommerce.less
+++ b/assets/less/woocommerce.less
@@ -281,6 +281,23 @@ span.onsale {
 	}
 }
 
+.woocommerce {
+	.products {
+		.type-product {
+			overflow: hidden;
+			
+			.star-rating {
+				margin: 0 auto 10px;
+			}
+			
+			.price {
+				display: block;
+				margin-bottom: 10px;
+			}
+		}
+	}
+}
+
 .woocommerce-cart {
 	.shipping-calculator-form {
 		display: block !important;
